# tm_threat_sentinel

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  export_source_code.py  pyproject.toml
src/: dev_autoreload.py  main.py  main_channel.py  main_threatintel.py
src/adapters/: llm_connector.py
src/connectors/: litellm_connector.py
src/converters/: __init__.py  infrastructure_converter.py
src/core/: analyzer_manager.py  crawler_manager.py  slack_manager.py
src/data/slack_channel_export/: channel_analysis_log.json  seen_urls.json
src/pipelines/: base_pipeline.py  channel_monitor.py  crawled_to_analysis.py  slack_to_urls.py  threat_intel_pipeline.py  urls_to_crawled.py
src/scripts/: convert_infrastructure.py
src/services/: analyzer_manager.py  crawler_manager.py  slack_manager.py
src/utils/: file_utils.py  path_utils.py  slack_helpers.py
src/workflows/: slack_to_urls.py
tests/: slack_private_channel.py  test_bedrock_llm.py
