[project]
name = "vulnerability-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.47",
    "crawl4ai>=0.7.4",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "litellm>=1.77.7",
    "loguru>=0.7.3",
    "slack-sdk>=3.37.0",
    "trafilatura>=2.0.0",
    "watchfiles>=1.1.0",
]

[project.optional-dependencies]
dev = ["watchfiles"]
