[project]
name = "vulnerability-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.47",
    "crawl4ai>=0.7.4",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "litellm>=1.77.7",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "slack-sdk>=3.37.0",
    "trafilatura>=2.0.0",
    "watchfiles>=1.1.0",
]

[project.optional-dependencies]
dev = ["watchfiles"]
